--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.13"
+    "mysql2": "^2.3.1",
+    "nodemon": "^2.0.13",
+    "sequelize": "^6.7.0"
   }
 }
