--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "cd server && npm start",
-    "build": "npm install && ng build",
+    "build": "npm install && ng build && npm start",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
