--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.1",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
