--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "express": "^4.16.4",
-    "express-validator": "^6.13.0",
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
-    "mysql2": "^2.3.1",
-    "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.13",
-    "sequelize": "^6.7.0"
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.12.4"
   }
 }
