Configuracion de nodemailer para funcionar con ferozo.

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
-NODEMAILER_SERVICE="Gmail"
+NODEMAILER_HOST="c1441202.ferozo.com"
+NODEMAILER_PORT=465
 NODEMAILER_USER="lnconstrucciones0@gmail.com"
 NODEMAILER_PASS="pruebanodemailer"
