--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "./bin/www.js",
+            "src": "./app.js",
             "use": "@vercel/node"
         }
     ],
